packages/babel-parser/test/fixtures/esprima/invalid-syntax/.migrated_0044/input.js
var source = 'var x = /[P QR]/\\\\u0067';
